float_eq/tests/derive_tests/assert_float_eq/assert_float_eq_enum.stderr
error: AssertFloatEq may only be derived for structs.
  --> $DIR/assert_float_eq_enum.rs:14:6
   |
14 | enum SomeEnum {
   |      ^^^^^^^^

error: FloatEqDebugUlpsDiff may only be derived for structs.
  --> $DIR/assert_float_eq_enum.rs:14:6
   |
14 | enum SomeEnum {
   |      ^^^^^^^^

error: FloatEq may only be derived for structs.
  --> $DIR/assert_float_eq_enum.rs:14:6
   |
14 | enum SomeEnum {
   |      ^^^^^^^^

error: FloatEqUlpsTol may only be derived for structs.
  --> $DIR/assert_float_eq_enum.rs:14:6
   |
14 | enum SomeEnum {
   |      ^^^^^^^^
